Thu Apr 30 19:56:49 BST 2009    Tom Mortimer <tom@lemurconsulting.com>

    * unittests/test_search.php: Added more tests.

Thu Apr 30 17:31:38 BST 2009    Tom Mortimer <tom@lemurconsulting.com>

    * flaxclient.php: Added searchJSON method.
    * unittests/test_search.php: Search unit tests.
    * unittests/runtests.php: Added test_search.

Thu Apr 30 11:26:53 BST 2009    Tom Mortimer <tom@lemurconsulting.com>

    * flax/searchserver/schema.py: Added validation of field properties.
    * flax/searchserver/application.py: Added validation of field properties.
      Disabled field overwrite protection.

Wed Apr 29 15:46:12 BST 2009    Tom Mortimer <tom@lemurconsulting.com>

    * flaxclient.php: Removed replaceDocument and added searchSimple.
    * unittests/test_docs.php: Added search test.

Wed Apr 29 12:44:25 BST 2009    Tom Mortimer <tom@lemurconsulting.com>

    * flaxclient.php: Added commit() method.
    * unittests/test_fields.php: Added calls to commit().
    * unittests/test_docs.php: Added calls to commit().

Wed Apr 22 14:27:40 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* _restclient_curl.php,flaxclient.php: Add curl-based client and
	  use it.

Wed Apr 22 13:18:56 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* _restclient.php,flaxclient.php: Some modifications to try and
	  some client redirecting, and to try and return the body on error.

Thu Apr  9 11:37:34 BST 2009    Tom Mortimer <tom@lemurconsulting.com>
    
    * php/flaxclient.php: Use 200/body instead of 201/Location. Accept
      numeric doc IDs.
    * php/_restclient.php: Removed 201/Location code.
    * php/unittests/test_docs.php: Got it working with server.

Wed Apr  8 16:47:46 BST 2009    Tom Mortimer <tom@lemurconsulting.com>

    * php/flaxclient.php: Don't construct a default REST client.
    * php/unittests/test_fields.php: Fixed assertions.
    * php/unittests/runtests.php: Can now test against real server.
